change department to grid

--- a/index.html
+++ b/index.html
@@ -422,13 +422,12 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
-                        <div class="section-title mb-50 ">
+                        <div class="section-title mb-50 text-center">
                             <span>أقسامنا</span>
                             <h2>استكشف أقسامنا الطبية</h2>
                         </div>
                         <div class="row" id="departments">
-                            <!-- Department Items with Bootstrap classes for layout and spacing -->
-
+                            <!-- Specializations will be injected here -->
                         </div>
                     </div>
                 </div>
@@ -451,84 +450,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-12">
-                        <div class="pricing-box text-center mb-60">
-                            <div class="pricing-head">
-                                <h4>د. مجاهد</h4>
-                                <div class="price-count mb-30">
-                                    <h2>طبيب عام مُمارس</h2>
-                                </div>
-                                <img src="img/icon/mojahed.png" alt="pricon">
-                            </div>
-                            <div class="pricing-body mb-40  text-right bold ">
-                                <p>حاصل على بكالوريوس الطب والجراحة، وزمالة كلية الجراحين الملكية بإدنبرة، بالإضافة إلى
-                                    تدريب مكثف في الجراحة العامة</p>
-                                <ul>
-                                    <li> تقديم استشارات طبية شاملة. </li>
-                                    <li>تشخيص وعلاج الأمراض الشائعة.</li>
-                                    <li> تقديم التطعيمات</li>
+                <div class="row" id="doctors">
+                    <!-- injuct doctor here -->
 
-                                </ul>
-                            </div>
-                            <div class="pricing-btn ">
-                                <a href="https://wa.me/9660124222240" class="btn">إحجز الأن <i
-                                        class="fas fa-chevron-right "></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="pricing-box  text-center mb-60">
-                            <div class="pricing-head">
-                                <h4>د. نهال أحمد</h4>
-                                <div class="price-count mb-30">
-                                    <h2>طبيبة مُمارسة عامة</h2>
-                                </div>
-                                <img src="img/icon/nehal.png" alt="pricon">
-                            </div>
-                            <div class="pricing-body mb-40  text-right">
-                                <p>
-                                    مُتخصصة في تقديم الرعاية الصحية الأولية الشاملة، مع التركيز على التشخيص والعلاج
-                                    والوقاية من الأمراض.
-                                </p>
-                                <ul>
-                                    <li>تشخيص وعلاج الأمراض الشائعة</li>
-                                    <li>مُتابعة الأمراض المُزمنة.</li>
-                                    <li> تقديم التطعيمات</li>
 
-                                </ul>
-                            </div>
-                            <div class="pricing-btn">
-                                <a href="https://wa.me/9660124222240" class="btn">إحجز الأن <i
-                                        class="fas fa-chevron-right "></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="pricing-box text-center mb-60">
-                            <div class="pricing-head">
-                                <h4>د. أحمد محمد زين</h4>
-                                <div class="price-count mb-30">
-                                    <h2>طبيب أسرة</h2>
-                                </div>
-                                <img src="img/icon/ahmed.png" alt="pricon">
-                            </div>
-                            <div class="pricing-body mb-40  text-right">
-                                <p>
-                                    طبيب أسرة ذو خبرة واسعة، ملتزم بتقديم رعاية صحية عالية الجودة لكافة أفراد عائلتك.
-                                </p>
-                                <ul>
-                                    <li> استشارات طبية عن بعد</li>
-                                    <li> رعاية الأمومة والطفولة </li>
-                                    <li> متابعة الأمراض المزمنة </li>
-                                </ul>
-                            </div>
-                            <div class="pricing-btn">
-                                <a href="https://wa.me/9660124222240" class="btn">إحجز الأن <i
-                                        class="fas fa-chevron-right "></i></a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
