--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div id="header-sticky" class="menu-area">
             <div class="container">
                 <div class="second-menu">
-                    <div class="row align-items-center">
+                    <div class="row align-items-center" style="justify-content: space-between;">
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo">
                                 <a href="index.html"><img src="img/logo/logo.png" alt="logo"></a>
@@ -173,9 +173,7 @@
                             <a href="https://wa.me/9660124222240" class="top-btn">احجز الآن <i
                                     class="fas fa-chevron-right"></i></a>
                         </div>
-                        <div class="col-12">
-                            <div class="mobile-menu"></div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -208,7 +206,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <img src="img/bg/header-img.png" alt="header-img" class="header-img" />
+                                <!-- مربعات هنا -->
                             </div>
                         </div>
                     </div>
@@ -218,55 +216,6 @@
 
 
         </section>
-        <!-- booking-area -->
-        <section id="booking" class="booking-area p-relative">
-            <div class="container">
-                <form action="#" class="contact-form">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <ul>
-                                <li>
-                                    <div class="contact-field p-relative c-name">
-                                        <input type="text" placeholder="الاسم" id="name">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="contact-field p-relative c-email">
-                                        <select class="custom-select" id="inputGroupSelect04"
-                                            aria-label="Example select with button addon">
-                                            <option selected>اختر طبيب...</option>
-                                            <option value="1">د. مجاهد </option>
-                                            <option value="2">د. نهال احمد</option>
-                                            <option value="3">د. احمد محمد</option>
-                                        </select>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="contact-field p-relative c-subject mb-20"> <select class="custom-select"
-                                            id="inputGroupSelect04" aria-label="Example select with button addon">
-                                            <option selected>إخترالقسم...</option>
-                                            <option value="1">طب اسرة</option>
-                                            <option value="2">طبيب عام</option>
-                                        </select>
-                                    </div>
-
-                                </li>
-                                <li>
-                                    <div class="slider-btn">
-                                        <a href="https://wa.me/9660124222240" class="btn ss-btn"
-                                            data-animation="fadeInRight" data-delay=".8s">إحجز الأن<i
-                                                class="fas fa-chevron-right"></i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-
-                </form>
-            </div>
-        </section>
-        <!-- booking-area-end -->
 
         <!-- services-area -->
         <section id="services" class="services-area services-bg services-two pt-100"
@@ -733,6 +682,9 @@
 
 
 <script>
+
+    indexInit();
+
     $(document).ready(function () {
         $("#patient").change(function () {
             if ($(this).val() === "add_new") {
